tests/nonsmoke/functional/CompileTests/ElsaTestCases/gnu/k0001.cc
// empty compound-statement expression

// originally found in package opencdk

// error: `({ ... })' cannot be empty

int main() {
    ({});
}
